--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@ logs
 *.log
 npm-debug.log*
 
+
 # Dependency directory
 node_modules
 secrets
 
 # Optional npm cache directory
 .npm
+.env
 
 # Optional REPL history
 .DS_Store
